tuzatishlar  kiritildi
